# clio

./: .gitignore  .grobl.config.json  LLM.md  README.md  pyproject.toml
scripts/: update_all.py
src/clio/: __init__.py  click_utils.py  clipboard.py  input.py  output.py  signal.py  utils.py
tests/: __init__.py  conftest.py  test_click_integration.py  test_clipboard.py  test_input.py  test_integration.py  test_output.py  test_signal.py
